# fitplate-ai

./: .json  Dockerfile  README.md  fitplate.db  fitplate.db-journal  pyproject.toml
app/: auth.py  config.py  database.py  icons.json  main.py  meal_tracking.py  models.py  reporting.py  styles.css
app/pages/: 1_Login.py  2_Food_Tracking.py  3_Reports.py
data/: demo_meal.json  fitplate.db  fitplate.db-journal  meals.json  user_profiles.json
models/: trainer.py
services/: analyzer.py  image_recognition.py  meal_recommendations.json  nutrition_analysis.json  nutrition_lookup.py  suggestions.py
tests/: test_nutrition.py
utils/: storage.py
