[tool.poetry]
name = "fitplate-ai"
version = "0.1.0"
description = "Async food image recognition and nutrition analysis web app using Streamlit"
authors = ["mohammad.tardeh@gmail.com"]
package-mode = false 
[tool.poetry.dependencies]
python = ">=3.10"
streamlit = "^1.33.0"
pillow = "^10.0.0"
aiohttp = "^3.9.0"
openai = "^1.30.1"
python-dotenv = "^1.0.0"
nest-asyncio = "^1.6.0"
pydantic = "^2.12.0"
sqlalchemy = "^2.0.0"
bcrypt = "^4.0.0"
pandas = "^2.0.0"
plotly = "^5.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
